# lymon-agent

./: Cargo.toml  Dockerfile  README.md  build.rs  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/collector-sdk/: Cargo.toml
crates/collector-sdk/src/: lib.rs
crates/plugin-opcua/: Cargo.toml  plugin.json
crates/plugin-opcua/src/: main.rs
crates/plugin-s7/: Cargo.toml  RUNBOOK.md  plugin.json  rustfmt.toml
crates/plugin-s7/src/: main.rs
crates/plugin-s7/src/s7/: blocks.rs  client.rs  decode.rs  mod.rs
docs/superpowers/plans/: 2026-06-18-s7-plugin.md
docs/superpowers/specs/: 2026-06-18-s7-plugin-design.md
examples/: echo_plugin.rs
install/: agent.ps1  agent.sh  install.ps1  install.sh  uninstall.ps1  uninstall.sh
src/: buffer.rs  collector.rs  config.rs  control.rs  enroll.rs  ingest_client.rs  logbuf.rs  main.rs  modbus.rs  plugins.rs  pss.rs  winservice.rs
