[package]
name = "lymon-agent"
version = "0.7.1"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
description = "Lymon Edge Agent — industrial data collection and forwarding"
repository = "https://github.com/lybits/lymon-agent"

# The agent binary is the workspace root; the connector SDK + example plugins
# are workspace members (built/linted together, not part of the agent binary).
[workspace]
members = ["crates/collector-sdk", "crates/plugin-s7"]
# plugin-opcua is a heavy optional plugin (async-opcua + RustCrypto): kept out
# of the agent build so the lean rustls-pure binary doesn't carry it. It builds
# standalone with its own Cargo.lock — the same shape as a 3rd-party plugin.
exclude = ["crates/plugin-opcua"]
resolver = "2"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Modbus TCP client
tokio-modbus = "0.16"

# Local buffer (SQLite WAL)
rusqlite = { version = "0.32", features = ["bundled"] }

# gRPC client (tls-webpki-roots → can dial a cloud ingest over https with a
# public CA, bundled roots so Windows/cross builds need no system trust store).
tonic = { version = "0.12", features = ["tls", "tls-webpki-roots"] }
prost = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Idempotency keys
ulid = "1.1"

# HTTP client for one-time enrollment exchange (rustls so Windows/cross
# builds don't need a system OpenSSL).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Control channel (agent-as-gateway): WebSocket client to the cloud gateway,
# TLS via rustls + bundled webpki roots (matches reqwest/tonic — no system trust).
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
# rustls 0.23 needs a process-wide crypto provider installed before the first
# wss handshake; we install `ring` in main(). Pinned to match tokio-tungstenite.
rustls = { version = "0.23", default-features = false, features = ["ring"] }
# ADR 49 W2.3 — control-command signature verification (Ed25519) + key decode.
ring = "0.17"
base64 = "0.22"

# Gateway adapters: PSS (Circutor Power Studio) speaks XML over HTTP; dates are
# DDMMYYYYHHmmss UTC.
quick-xml = { version = "0.36", features = ["serialize"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry-otlp = { version = "0.27", features = ["http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
tracing-opentelemetry = "0.28"

# Config + CLI
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Windows service support (the agent runs as a native service on Windows).
[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"        # optimize for binary size (criterio 5: <15MB)
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
