[package]
name = "lymon-plugin-s7"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Example Lymon connector plugin: Siemens S7 (skeleton, built on the SDK)"

[[bin]]
name = "lymon-plugin-s7"
path = "src/main.rs"

[dependencies]
lymon-collector-sdk = { path = "../collector-sdk" }
serde_json = "1"
