[package]
name = "lymon-plugin-s7"
version = "0.3.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
description = "Lymon connector plugin: Siemens S7 (S7-300/400/1200/1500 over ISO-on-TCP), built on the SDK + vendored rust7"

[[bin]]
name = "lymon-plugin-s7"
path = "src/main.rs"

[dependencies]
lymon-collector-sdk = { path = "../collector-sdk" }
serde_json = "1"
